--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+h1{
+  font-family: 'East Sea Dokdo', cursive;
+  font-size: 72px;
+  color: #0ccac4;
+}
